# iot-conformance

./: .gitmodules  README.md
mqtt/: README.md
mqtt/host/: CMakeLists.txt
mqtt/host/components/tcp_transport/: CMakeLists.txt  esp_transport_tcp_udp.c
mqtt/host/main/: CMakeLists.txt  mqtt_host_main.c
mqtt/host/scripts/: mqtt_udp_server.py
mqtt/suite/: README.md
tcp/suite/: README.md  esp32_netsuite.ttcn  net_suite_test.py
